gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/funcpostattr.d
version https://git-lfs.github.com/spec/v1
oid sha256:a84a46531cde20bb7ca517b559b61dac6d196aa84ab5e5a8caa7d6d281ee7aa6
size 629
